--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "webpack --config webpack.production.config.js",
     "dev": "webpack-dev-server --config webpack.dev.config.js --hot"
   },
+  "browserslist": [
+    "> 1%",
+    "ie > 9"
+  ],
   "watch": true,
   "repository": {
     "type": "git",
@@ -49,13 +53,15 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.9.4",
+    "autoprefixer": "^9.8.0",
     "babel-preset-react": "^6.24.1",
     "classnames": "^2.2.6",
     "handlebars": "^4.7.6",
     "handlebars-loader": "^1.7.1",
+    "postcss-loader": "^3.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "styled-components": "^5.1.0"
   }
 }
